[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Tablet Information/BestiaryNotables_Tablet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Icons/Tablet_Sprite/Icon_voltar.png" type="Texture" id=2]
[ext_resource path="res://Fontes/fonte Poppins/fonte Poppins/Poppins-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/UI/Icons/Icons_Notables/teste notaveis.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Icons/Icons_Config/Fechar.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Icons/Icons_Notables/BG_Notables.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Icons/Icons_Notables/BG_nameNotables.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 1
use_filter = true
font_data = ExtResource( 3 )

[node name="BestiaryNotables" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="Panel_Notables" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel_exit" type="Button" parent="Panel_Notables"]
self_modulate = Color( 0.470588, 0.470588, 0.470588, 0.819608 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG_Notaveis" type="TextureRect" parent="Panel_Notables"]
self_modulate = Color( 1, 1, 1, 0.0941176 )
anchor_left = 0.036
anchor_top = 0.035
anchor_right = 0.969
anchor_bottom = 0.962
margin_left = -0.0800018
margin_top = -0.200001
margin_right = -0.320068
margin_bottom = 0.359924
texture = ExtResource( 6 )
expand = true

[node name="Biografia" type="Label" parent="Panel_Notables/BG_Notaveis"]
anchor_left = 0.15
anchor_top = 0.018
anchor_right = 0.248
anchor_bottom = 0.066
margin_left = -0.308014
margin_top = -0.0960016
margin_right = 0.243988
margin_bottom = -0.16
custom_fonts/font = SubResource( 1 )
text = "Biografia"

[node name="BT_Voltar" type="Button" parent="Panel_Notables/BG_Notaveis"]
anchor_left = 0.113
anchor_top = 0.022
anchor_right = 0.141
anchor_bottom = 0.063
margin_left = 0.149979
margin_top = -1.762
margin_right = 0.493988
margin_bottom = -0.281998
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="Panel_Notables"]
anchor_left = 0.072
anchor_top = 0.126
anchor_right = 0.292
anchor_bottom = 0.861
margin_left = -0.160004
margin_top = 0.279999
margin_right = 0.23996
margin_bottom = 0.0799561

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_Notables/ScrollContainer"]
margin_right = 282.0
margin_bottom = 546.0
rect_min_size = Vector2( 282, 500 )
custom_constants/separation = -2

[node name="Button_Galileu" type="Button" parent="Panel_Notables/ScrollContainer/VBoxContainer"]
margin_right = 282.0
margin_bottom = 70.0
rect_min_size = Vector2( 282, 70 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="Button_Boyle" type="Button" parent="Panel_Notables/ScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 282.0
margin_bottom = 138.0
rect_min_size = Vector2( 282, 70 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="Button_Newton" type="Button" parent="Panel_Notables/ScrollContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 282.0
margin_bottom = 206.0
rect_min_size = Vector2( 282, 70 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="Button_Curie" type="Button" parent="Panel_Notables/ScrollContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 282.0
margin_bottom = 274.0
rect_min_size = Vector2( 282, 70 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="Button_Turing" type="Button" parent="Panel_Notables/ScrollContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 282.0
margin_bottom = 342.0
rect_min_size = Vector2( 282, 70 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="Button_Wortley" type="Button" parent="Panel_Notables/ScrollContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 282.0
margin_bottom = 410.0
rect_min_size = Vector2( 282, 70 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="Button_Jenner" type="Button" parent="Panel_Notables/ScrollContainer/VBoxContainer"]
margin_top = 408.0
margin_right = 282.0
margin_bottom = 478.0
rect_min_size = Vector2( 282, 70 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="Button_Pasteur" type="Button" parent="Panel_Notables/ScrollContainer/VBoxContainer"]
margin_top = 476.0
margin_right = 282.0
margin_bottom = 546.0
rect_min_size = Vector2( 282, 70 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="exit_Notables" type="Button" parent="."]
visible = false
anchor_left = 0.91
anchor_top = 0.008
anchor_right = 0.941
anchor_bottom = 0.067
margin_left = 0.199951
margin_top = 0.24
margin_right = 0.519897
margin_bottom = -0.240002
icon = ExtResource( 5 )
flat = true
expand_icon = true

[connection signal="pressed" from="Panel_Notables/Panel_exit" to="." method="_on_Panel_exit_pressed"]
[connection signal="pressed" from="Panel_Notables/BG_Notaveis/BT_Voltar" to="." method="_on_BT_Voltar_pressed"]
[connection signal="pressed" from="exit_Notables" to="." method="_on_exit_Notables_pressed"]
